Bug 275716 [IDE] Local history preferences note doesn't match reality

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -500,7 +500,7 @@ FileHistory_invalid = Invalid value: {0}
 FileHistory_exceptionSaving = Internal error saving local history
 FileHistory_aboveMaxEntries = Above maximum Entries per file: {0}
 FileHistory_aboveMaxFileSize = Above maximum file size value: {0}
-FileHistory_restartNote = The 'Maximum entries per file' and 'Days to keep files'\nvalues are only applied on restart.
+FileHistory_restartNote = The 'Maximum entries per file' and the 'Days to keep files' values\nare only applied when compacting the local history on shutdown.
 
 # --- Perspectives ---
 ProjectSwitchPerspectiveMode_optionsTitle = Open the associated perspective when creating a new project
