Bug 274260 - Dialog to cancel history pruning on shutdown needs polish

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -18,6 +18,8 @@
 
 IDEWorkbenchAdvisor_noPerspective=No perspectives are open. To open a perspective, press this button:
 IDEWorkbenchAdvisor_cancelHistoryPruning=Cancel to skip compacting local history.
+IDEWorkbenchAdvisor_preHistoryCompaction=Saving workbench state.
+IDEWorkbenchAdvisor_postHistoryCompaction=Disconnecting from workspace.
 
 IDE_noFileEditorFound = No editor found to edit the file resource.
 IDE_sideEffectWarning=Potential side effects have been identified.
