Bug 172356 Update to non-updateable site goes through in a second attempt

--- a/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
+++ b/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
@@ -99,9 +99,9 @@ FeatureExecutableContentProvider_UnableToCreateURLFor=Unable to create a URL for
 FeatureExecutableContentProvider_UnableToRetrieveNonPluginEntry=Error retrieving the non-plug-in entry: \"{0}\".
 FeatureExecutableContentProvider_UnableToRetrieveFeatureEntry=Error retrieving feature entry content reference: \"{0}\".
 FeatureExecutableContentProvider_UnableToRetrievePluginEntry =Error retrieving the plug-in entry: \"{0}\".
-ConfiguredSite_NonInstallableSite= You cannot install in the site \"{0}\". It is considered non updateable.
+ConfiguredSite_NonInstallableSite= You cannot install in the site \"{0}\".
 ConfiguredSite_NullFeatureToInstall= Internal Error. The feature to be installed is null.
-ConfiguredSite_NonUninstallableSite= You cannot uninstall from the site \"{0}\". It is considered non updateable.
+ConfiguredSite_NonUninstallableSite= You cannot uninstall from the site \"{0}\".
 ConfiguredSite_NoSite= No Site
 ConfiguredSite_CannotFindFeatureToUnconfigure= Internal Error. Unable to disable feature \"{0}\" on site \"{1}\". Cannot find feature.
 ConfiguredSite_CannotFindFeatureToConfigure= Internal Error. Unable to enable feature \"{0}\". Cannot find feature.
@@ -109,6 +109,7 @@ ConfiguredSite_CannotFindPluginEntry= Unable to retrieve Plug-in Entry \"{0}\" o
 ConfiguredSite_MissingPluginsBrokenFeature= Plug-in \"{0}\" version \"{1}\" referenced by this feature is missing.
 ConfiguredSite_UnableToRemoveConfiguredFeature= Unable to remove a enabled feature: \"{0}\" You must disable the feature first.
 ConfiguredSite_UnableToFindFeature= Unable to Find the feature \"{0}\" on this site.
+ConfiguredSite_NonUpdateableSite=The site is not updateable.
 ConfiguredSite_SiteURLNull=The Site URL is null.
 ConfiguredSite_NonLocalSite=The Site is not on the local file system. Cannot validate.
 ConfiguredSite_NotSameProductId=The site cannot be modified by this product. It is already associated with product: \"{0}\".
