bug 131512 - IResource#setPersistentProperty should give better message in Exception

--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -119,7 +119,7 @@ projRead_failureReadingProjectDesc = Failure occurred reading .project file.
 
 properties_qualifierIsNull = Qualifier part of property key cannot be null.
 properties_readProperties = Failure while reading persistent properties for resource ''{0}'', file was corrupt. Some properties may have been lost.
-properties_valueTooLong = Could not set property: {0} {1}. Value is too long.
+properties_valueTooLong = Could not set property: {0} {1}. Value is longer than {2} bytes.
 properties_couldNotClose = Could not close property store for: {0}.
 
 ### auto-refresh
