Bug 262515 [SSH2] An undetermined authentication failure   * applying a patch that allows for method order selection   * https://bugs.eclipse.org/bugs/show_bug.cgi?id=262515#c20

--- a/bundles/org.eclipse.jsch.ui/src/org/eclipse/jsch/internal/ui/messages.properties
+++ b/bundles/org.eclipse.jsch.ui/src/org/eclipse/jsch/internal/ui/messages.properties
@@ -14,6 +14,7 @@
 CVSSSH2ServerConnection_open=Connecting via SSH to {0}...
 CVSSSH2PreferencePage_18=Configuration options for SSH2:
 CVSSSH2PreferencePage_19=&General
+CVSSSH2PreferencePage_2=Up
 CVSSSH2PreferencePage_20=&Proxy
 CVSSSH2PreferencePage_21=&Key Management
 CVSSSH2PreferencePage_23=SSH2 &home:
@@ -21,6 +22,7 @@ CVSSSH2PreferencePage_24=&Browse...
 CVSSSH2PreferencePage_25=P&rivate keys:
 CVSSSH2PreferencePage_26=Add Pr&ivate Key...
 CVSSSH2PreferencePage_27=SSH Home:
+CVSSSH2PreferencePage_3=Down
 CVSSSH2PreferencePage_30=&Enable proxy connection
 CVSSSH2PreferencePage_31=Proxy &type:
 CVSSSH2PreferencePage_32=Proxy host add&ress:
@@ -29,6 +31,7 @@ CVSSSH2PreferencePage_34=E&nable proxy authentication
 CVSSSH2PreferencePage_35=Proxy &user name:
 CVSSSH2PreferencePage_36=Proxy pa&ssword:
 CVSSSH2PreferencePage_39=&You can paste this public key into the remote authorized_keys file:
+CVSSSH2PreferencePage_4=Select preferred authentication methods
 CVSSSH2PreferencePage_41=&Fingerprint:
 CVSSSH2PreferencePage_42=&Comment:
 CVSSSH2PreferencePage_43=Passp&hrase:
@@ -37,6 +40,7 @@ CVSSSH2PreferencePage_45=&Save Private Key...
 CVSSSH2PreferencePage_47=The key was not generated.
 CVSSSH2PreferencePage_48=The passphrases entered do not match.
 CVSSSH2PreferencePage_49=Are you sure you want to save this private key without passphrase protection?
+CVSSSH2PreferencePage_5=You must select at least one authentication method.
 CVSSSH2PreferencePage_50={0} does not exist.\nAre you sure you want to create it?
 CVSSSH2PreferencePage_53={0} has already existed.\nAre you sure you want to overwrite it?
 CVSSSH2PreferencePage_55=Successfully saved.
@@ -71,6 +75,7 @@ CVSSSH2PreferencePage_133=Kno&wn Hosts
 CVSSSH2PreferencePage_134=Hostname
 CVSSSH2PreferencePage_135=Type
 CVSSSH2PreferencePage_136=Fingerprint
+CVSSSH2PreferencePage_137=&Authentication Methods
 CVSSSH2PreferencePage_138=&Remove
 CVSSSH2PreferencePage_139=Keys of known hosts:
 UserInfoPrompter_0=SSH2 Message
