Bug 285045 [IDE] TVT35:TCT330: CHS: Duplicate Mnemonic Keys on workspace pref page

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -581,7 +581,7 @@ QuickStartAction_openEditorException = An exception occurred when opening the ed
 # Dialogs
 # ==============================================================================
 Question = Question
-Always = &Always
+Always = Alwa&ys
 Never = &Never
 Prompt = &Prompt
 
