Fix for Bug 275039 - [Markers] Configure contents "Match all/any configuration" wording ambiguous

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -186,8 +186,9 @@ MarkerFilter_ConfigureContentsCommand_title = &Configure Contents...
 MarkerFilterDialog_title=Add New Filter
 MarkerFilterDialog_message=Select Filter Name
 MarkerFilterDialog_emptyMessage=Name must not be empty
-AND_Title = Match a&ll configurations
-OR_Title = Match &any configuration
+AND_OR_Label=Show results matching: 
+AND_Title = A&ll enabled filters
+OR_Title = &Any enabled filter
 
 MarkerFilterDialog_errorTitle = An error has occurred
 MarkerFilterDialog_failedFilterMessage = Could not create filter {0}. 
