Bug 269844 [GlobalActions] "Close Unrelated Projects" is dangerous and needs confirmation

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -12,6 +12,7 @@
 # 		- Fix for Bug 186823 [Wizards] New Project Wizard has colliding mnemonics
 #	  Oakland Software Incorporated (Francis Upton) <francisu@ieee.org>
 #		- Bug 224997 [Workbench] Impossible to copy project
+#     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
 ###############################################################################
 
 # package: org.eclipse.ui.ide
@@ -263,6 +264,10 @@ CloseResourceAction_operationMessage = Closing project...
 
 CloseUnrelatedProjectsAction_text = Close &Unrelated Projects
 CloseUnrelatedProjectsAction_toolTip = Close Unrelated Projects
+CloseUnrelatedProjectsAction_AlwaysClose= &Always close without prompt
+CloseUnrelatedProjectsAction_AlwaysCloseWithoutPrompt= Always &close unrelated projects without prompt
+CloseUnrelatedProjectsAction_confirmMsg1 = Are you sure you want to close all projects that are not related to ''{0}''?
+CloseUnrelatedProjectsAction_confirmMsgN = Are you sure you want to close all projects that are not related to these {0} projects?
 
 BuildAction_text = &Build Project
 BuildAction_toolTip = Incremental Build of Selected Projects
@@ -463,6 +468,7 @@ IDEWorkspacePreference_defaultLineDelimProj=Inh&erited from container
 IDEWorkspacePreference_otherLineDelim= Ot&her:
 IDEWorkspacePreference_relatedLink = See <a>''{0}''</a> for workspace startup and shutdown preferences.
 IDEWorkspacePreference_openReferencedProjects = Open referenced projects when a project is opened
+IDEWorkspacePreference_closeUnrelatedProjectsToolTip = Close unrelated projects without prompt
 
 # --- Linked Resources ---
 LinkedResourcesPreference_explanation = Path variables specify locations in the file system. The locations of linked resources\nmay be specified relative to these path variables.
