Fix for Bug 272474 - [Markers] Problem view's Hide/Show columns preferences dont work correctly

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -201,6 +201,7 @@ MarkerPreferences_MoveRight = >>
 MarkerPreferences_ColumnGroupTitle = Hide/Show Columns
 MarkerPreferences_VisibleColumnsTitle = &Show
 MarkerPreferences_HiddenColumnsTitle = &Hide
+MarkerPreferences_AtLeastOneVisibleColumn = There must be at least one visible column.
 
 ProblemFilterDialog_System_Filters_Title = System filte&rs:
 ProblemFilterDialog_All_Problems = Enabled for all problems
