Fix for  Bug 275018 - [Markers] Problems View / Configure Contents dialog should support rename

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -180,11 +180,12 @@ MarkerFilter_filtersTitle=User f&ilters:
 MarkerFilter_addFilterName=&New...
 MarkerFilter_cloneFilterName=D&uplicate...
 MarkerFilter_deleteSelectedName = Remo&ve
+MarkerFilter_renameName = &Rename
 MarkerFilter_showAllCommand_title = &Show All
 MarkerFilter_ConfigureContentsCommand_title = &Configure Contents...
 
-MarkerFilterDialog_title=Add New Filter
-MarkerFilterDialog_message=Select Filter Name
+MarkerFilterDialog_title=Filter Name
+MarkerFilterDialog_message=Select a filter name
 MarkerFilterDialog_emptyMessage=Name must not be empty
 AND_OR_Label=Show results matching: 
 AND_Title = A&ll enabled filters
