bug 87756 - [Progress] Job name used as title of error dialog

--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -911,8 +911,8 @@ WorkspaceModelParticipant_0=Updating all changes in {0}
 
 
 ProjectMetaFile_taskName=Looking for a remote meta file
-TagFromWorkspace_taskName=Tagging from workspace
-TagFromRepository_taskName=Tagging from repository
+TagFromWorkspace_taskName=Tagging from Workspace
+TagFromRepository_taskName=Tagging from Repository
 UpdateOnlyMergeable_taskName=Updating mergeable changes
 UpdateDialog_overwriteTitle=Overwrite Local Changes?
 UpdateMergePreferencePage_0=&Never preview and use CVS text markup to indicate conflicts
