bug 45805 - Changing derived bit should generate delta

--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -250,6 +250,7 @@ resources_setLocal = Setting resource local flag.
 resources_settingCharset = Setting character set for resource ''{0}''.
 resources_settingDefaultCharsetContainer = Setting default character set for resource ''{0}''.
 resources_settingContents = Setting contents for ''{0}''.
+resources_settingDerivedFlag = Setting derived flag for resource ''{0}''.
 resources_shutdown = Workspace was not properly initialized or has already shutdown.
 resources_shutdownProblems = Problem on shutdown.
 resources_snapInit = Could not initialize snapshot file.
