--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -7,6 +7,8 @@
 #
 # Contributors:
 #     IBM Corporation - initial API and implementation
+#     Serge Beauchamp (Freescale Semiconductor) - [252996] add resource filtering
+#     Serge Beauchamp (Freescale Semiconductor) - [229633] Group and Project Path Variable Support
 ###############################################################################
 ### Resources plugin messages.
 
@@ -52,6 +54,15 @@ links_notFileFolder = Cannot create linked resource ''{0}''.  Only files and fol
 links_vetoNature = Cannot add nature because project ''{0}'' contains linked resources, and nature ''{1}'' does not allow it.
 links_workspaceVeto = Linked resources are not supported by this application.
 links_wrongLocalType = Cannot create linked resource ''{0}''.  Files cannot be linked to folders.
+links_resourceIsNotALink=Resource ''{0}'' must be a linked resource to change its linked location.
+links_setLocation=Changing link location.
+
+group_creating = Creating group.
+group_errorGroupReconcile = Error processing changed groups in project description file.
+group_invalidParent = Only groups and links can be created under a group.
+
+filter_creating = Creating filter.
+filters_missingFilterType= Missing resource filter type: ''{0}''.
 
 ### local store
 localstore_copying = Copying ''{0}''.
@@ -117,9 +128,22 @@ projRead_whichValue = Two values detected for an argument value in a build comma
 projRead_notProjectDescription = Encountered element name ''{0}'' instead of \"project\" when trying to read a project description file.
 projRead_failureReadingProjectDesc = Failure occurred reading .project file.
 
+projRead_badGroupName = Names \"{0}\" and \"{1}\" detected for a single group.  Using \"{0}\".
+projRead_emptyGroupName = Empty name detected for group resource "{0}\".
+
+projRead_emptyVariableName = Empty variable name detected in project "{0}\".
+
+projRead_badFilterName = Names ''{0}'' and ''{1}'' detected for a single filter.  Using ''{0}''.
+projRead_emptyFilterName = Empty name detected for filtered resource with type ''{0}'' and id ''{1}''.
+projRead_badFilterID = Empty filter id detected for filtered resource with name ''{0}'' and type ''{1}''.
+projRead_badFilterType = Illegal filter type \"-1\" detected for filtered resource with name ''{0}'' and id ''{1}''.
+projRead_badFilterType2 = Types ''{0}'' and ''{1}'' detected for a single filter.  Using ''{0}''.
+projRead_badID = IDs ''{0}'' and ''{1}'' detected for a single filter.  Using ''{0}''.
+projRead_badArguments= Arguments ''{0}'' and ''{1}'' detected for a single filter.  Using ''{0}''.
+
 properties_qualifierIsNull = Qualifier part of property key cannot be null.
 properties_readProperties = Failure while reading persistent properties for resource ''{0}'', file was corrupt. Some properties may have been lost.
-properties_valueTooLong = Could not set property: {0} {1}. Value is longer than {2} bytes.
+properties_valueTooLong = Could not set property: {0} {1}. Value is too long.
 properties_couldNotClose = Could not close property store for: {0}.
 
 ### auto-refresh
@@ -267,6 +291,8 @@ resources_writeMeta = Could not write metadata for ''{0}''.
 resources_writeWorkspaceMeta = Could not write workspace metadata ''{0}''.
 
 synchronizer_partnerNotRegistered = Sync partner: {0} not registered with the synchronizer.
+
+parentVariableProvider_noVariableSpecified=< Specify a variable using the syntax "$ {PARENT-COUNT-MyVariable}" where COUNT is a digit larger than 0 >
 
 ### URL
 url_badVariant = Unsupported \"platform:\" protocol variation {0}.
