Bug 278290  [Intro] Make the RSS news reader reusable:

--- a/org.eclipse.ui.intro/src/org/eclipse/ui/internal/intro/impl/Messages.properties
+++ b/org.eclipse.ui.intro/src/org/eclipse/ui/internal/intro/impl/Messages.properties
@@ -58,3 +58,11 @@ IntroPart_openExternal_tooltip = Open External Browser
 
 #Always welcome checkbox
 AlwaysWelcomeCheckbox_Text=Always show Welcome at start up
+
+#Eclipse RSS Viewer
+RSS_Subscribe=Subscribe
+RSS_Loading=Loading the news....
+RSS_No_news_please_visit=No news. Please visit: 
+RSS_Reading=Reading the news....
+RSS_No_news=No news at this time.
+RSS_Malformed_feed=An RSS feed "{0}" is malformed. News from this site is temporarily unavailable.
