Bug 281146  [Help][Index] See references added to the keyword index:

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -233,6 +233,6 @@ ViewICPropsDialog_23=\ Connected
 ViewICPropsDialog_24=\ Not Connected
 ViewICPropsDialog_URL=URL: 
 
-See=See {0}
-SeeAlso=See also {0}
+See=see {0}
+SeeAlso=see also {0}
 SeeList={0} / {1}
