Bug 274262 - [History] Allow to never prune history

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -503,6 +503,7 @@ PathVariableDialog_pathDoesNotExistMessage = Path does not exist.
 FileHistory_longevity = Days to &keep files:
 FileHistory_entries = Maximum &entries per file:
 FileHistory_diskSpace = &Maximum file size (MB):
+FileHistory_applyPolicy = Apply history size policy
 FileHistory_mustBePositive = Values must be positive
 FileHistory_invalid = Invalid value: {0}
 FileHistory_exceptionSaving = Internal error saving local history
