--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -13,6 +13,7 @@
 #	  Oakland Software Incorporated (Francis Upton) <francisu@ieee.org>
 #		- Bug 224997 [Workbench] Impossible to copy project
 #     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
+#     Serge Beauchamp (Freescale Semiconductor) - [252996] Resource filters
 ###############################################################################
 
 # package: org.eclipse.ui.ide
@@ -50,6 +51,7 @@ IDEIdleHelper_backgroundGC = Collecting garbage
 ############################################################
 showAdvanced = &Advanced >>
 hideAdvanced = << &Advanced
+editfilters = Resource Filters...
 
 # ==============================================================================
 # Workbench Actions
@@ -546,6 +548,27 @@ ResourceInfo_bytes = {0}  bytes
 ResourceInfo_file = File
 ResourceInfo_fileTypeFormat = File  ({0})
 ResourceInfoPage_noResource=Resource information is not available for the current selection.
+ResourceFilterPage_title=Resource Filters can be used to hide file system objects from the Eclipse resource tree.\nA resource will be included if it matches any of the "Include Only" filters and doesn't match any of the "Exclude All" filters. 
+ResourceFilterPage_noResource=Resource information is not available for the current selection.
+ResourceFilterPage_addButtonLabel=Add...
+ResourceFilterPage_editButtonLabel=Edit...
+ResourceFilterPage_removeButtonLabel=Remove
+ResourceFilterPage_upButtonLabel=Up
+ResourceFilterPage_downButtonLabel=Down
+ResourceFilterPage_addNewFilterTitle=Add new resource filter
+ResourceFilterPage_columnFilterID=Type
+ResourceFilterPage_columnFilterMode=Mode
+ResourceFilterPage_columnFilterTargets=Target
+ResourceFilterPage_columnFilterInheritable=Inheritable
+ResourceFilterPage_columnFilterArguments=Arguments
+ResourceFilterPage_includeOnly=Include Only
+ResourceFilterPage_excludeAll=Exclude All
+ResourceFilterPage_filesAndFolders=Files and Folders
+ResourceFilterPage_files=Files
+ResourceFilterPage_folders=Folders
+ResourceFilterPage_editFilterDialogTitle=Edit Resource Filter
+ResourceFilterPage_description=Description
+ResourceFilterPage_addSubFilterActionLabel=Add Condition...
 ResourceInfo_folder = Folder
 ResourceInfo_project = Project
 ResourceInfo_linkedFile = Linked File
