bug 219570: [Sync View] "Link with Editor" for Synchronize view

--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -162,6 +162,11 @@ SynchronizeView_13=\ items selected
 SynchronizeView_14=Error opening perspective
 SynchronizeView_16=Error opening view
 SynchronizeView_statusLine={0} [{1}]
+SynchronizeView_linkWithEditor=Link with Editor
+SynchronizeView_linkWithEditorDescription=Link with active editor
+SynchronizeView_linkWithEditorTooltip=Link with Editor and Selection
+SynchronizeView_fileMustNotBeNull=File must not be null
+SynchronizeView_noActiveWorkbenchPage=No active workbench page
 
 StatisticsPanel_outgoing=Outgoing
 StatisticsPanel_conflicting=Conflicting
