Fix for Bug 292525 - [Markers] Code clean up in markers view. - (Patch v01)

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -227,6 +227,7 @@ FieldCategory_Uncategorized = Other
 Category_Label = {0} ({1} items)
 Category_One_Item_Label = {0} (1 item)
 Category_Limit_Label = {0} ({1} of {2} items)
+Category_building = {0} (...)
 
 MarkerResolutionDialog_Fixing = Fixing
 MarkerResolutionDialog_Description = Select the fix for ''{0}''.
