Bug 292517 - Resource Filter UI needs polish

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -548,11 +548,11 @@ ResourceInfo_bytes = {0}  bytes
 ResourceInfo_file = File
 ResourceInfo_fileTypeFormat = File  ({0})
 ResourceInfoPage_noResource=Resource information is not available for the current selection.
-ResourceFilterPage_title=Resource Filters can be used to hide file system objects from the Eclipse resource tree.\nA resource will be included if it matches any of the "Include Only" filters and doesn't match any of the "Exclude All" filters. 
+ResourceFilterPage_title=Resource Filters can be used to hide file system objects from the Eclipse resource tree.\nA resource will be included if it matches any of the include filters and doesn't match any of the exclude filters. 
 ResourceFilterPage_noResource=Resource information is not available for the current selection.
-ResourceFilterPage_addButtonLabel=Add...
-ResourceFilterPage_editButtonLabel=Edit...
-ResourceFilterPage_removeButtonLabel=Remove
+ResourceFilterPage_addButtonLabel=&Add...
+ResourceFilterPage_editButtonLabel=Edi&t...
+ResourceFilterPage_removeButtonLabel=&Remove
 ResourceFilterPage_upButtonLabel=Up
 ResourceFilterPage_downButtonLabel=Down
 ResourceFilterPage_addNewFilterTitle=Add new resource filter
@@ -560,10 +560,10 @@ ResourceFilterPage_columnFilterID=Type
 ResourceFilterPage_columnFilterMode=Mode
 ResourceFilterPage_columnFilterTargets=Target
 ResourceFilterPage_columnFilterInheritable=Inheritable
-ResourceFilterPage_columnFilterArguments=Arguments
-ResourceFilterPage_includeOnly=Include Only
-ResourceFilterPage_excludeAll=Exclude All
-ResourceFilterPage_filesAndFolders=Files and Folders
+ResourceFilterPage_columnFilterArguments=Match string
+ResourceFilterPage_includeOnly=Include
+ResourceFilterPage_excludeAll=Exclude
+ResourceFilterPage_filesAndFolders=Files and folders
 ResourceFilterPage_files=Files
 ResourceFilterPage_folders=Folders
 ResourceFilterPage_editFilterDialogTitle=Edit Resource Filter
