Bug 292517 - Resource Filter UI needs polish

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -559,13 +559,18 @@ ResourceFilterPage_addNewFilterTitle=Add new resource filter
 ResourceFilterPage_columnFilterID=Type
 ResourceFilterPage_columnFilterMode=Mode
 ResourceFilterPage_columnFilterTargets=Target
-ResourceFilterPage_columnFilterInheritable=Inheritable
+ResourceFilterPage_columnFilterInheritable=In&heritable
 ResourceFilterPage_columnFilterArguments=Match string
-ResourceFilterPage_includeOnly=Include
-ResourceFilterPage_excludeAll=Exclude
-ResourceFilterPage_filesAndFolders=Files and folders
-ResourceFilterPage_files=Files
-ResourceFilterPage_folders=Folders
+ResourceFilterPage_includeOnly=&Include
+ResourceFilterPage_excludeAll=&Exclude
+ResourceFilterPage_includeOnlyColumn=Include
+ResourceFilterPage_excludeAllColumn=Exclude
+ResourceFilterPage_filesAndFolders=Files &and folders
+ResourceFilterPage_files=F&iles
+ResourceFilterPage_folders=F&olders
+ResourceFilterPage_filesAndFoldersColumn=Files and folders
+ResourceFilterPage_filesColumn=Files
+ResourceFilterPage_foldersColumn=Folders
 ResourceFilterPage_editFilterDialogTitle=Edit Resource Filter
 ResourceFilterPage_description=Description
 ResourceFilterPage_addSubFilterActionLabel=Add Condition...
