Bug 280459  [Help] Error codes for failed remote assist network transactions:

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -52,6 +52,7 @@ HelpView_defaultText=Click on any workbench part to show related help topics.
 expression = Search expression:
 expression_label = * = any string, ? = any character, "" = phrase, AND, OR, NOT = boolean operators
 limit_to = Search scope
+remoteHelpUnavailable=Some network help is unavailable.
 
 SeeAlsoPart_search=Search
 SeeAlsoPart_allTopics=Contents
