bug 293542: [Sync View] Link with Editor view menu has no mnemonic

--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -162,7 +162,7 @@ SynchronizeView_13=\ items selected
 SynchronizeView_14=Error opening perspective
 SynchronizeView_16=Error opening view
 SynchronizeView_statusLine={0} [{1}]
-SynchronizeView_linkWithEditor=Link with Editor
+SynchronizeView_linkWithEditor=Lin&k with Editor
 SynchronizeView_linkWithEditorDescription=Link with active editor
 SynchronizeView_linkWithEditorTooltip=Link with Editor and Selection
 SynchronizeView_fileMustNotBeNull=File must not be null
