Bug 293553 - Resource Filter UI needs mnemonic clean up

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -566,7 +566,7 @@ ResourceFilterPage_excludeAll=&Exclude
 ResourceFilterPage_includeOnlyColumn=Include
 ResourceFilterPage_excludeAllColumn=Exclude
 ResourceFilterPage_filesAndFolders=Files &and folders
-ResourceFilterPage_files=F&iles
+ResourceFilterPage_files=&Files
 ResourceFilterPage_folders=F&olders
 ResourceFilterPage_filesAndFoldersColumn=Files and folders
 ResourceFilterPage_filesColumn=Files
