Bug 293553 - Resource Filter UI needs mnemonic clean up

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -556,11 +556,11 @@ ResourceFilterPage_removeButtonLabel=&Remove
 ResourceFilterPage_upButtonLabel=Up
 ResourceFilterPage_downButtonLabel=Down
 ResourceFilterPage_addNewFilterTitle=Add new resource filter
-ResourceFilterPage_columnFilterID=Type
+ResourceFilterPage_columnFilterID=T&ype
 ResourceFilterPage_columnFilterMode=Mode
 ResourceFilterPage_columnFilterTargets=Target
 ResourceFilterPage_columnFilterInheritable=In&heritable
-ResourceFilterPage_columnFilterArguments=Match string
+ResourceFilterPage_columnFilterArguments=&Match string
 ResourceFilterPage_includeOnly=&Include
 ResourceFilterPage_excludeAll=&Exclude
 ResourceFilterPage_includeOnlyColumn=Include
