BugÊ293672 - Rename "String Matcher" filter matcher

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -560,7 +560,7 @@ ResourceFilterPage_columnFilterID=T&ype
 ResourceFilterPage_columnFilterMode=Mode
 ResourceFilterPage_columnFilterTargets=Target
 ResourceFilterPage_columnFilterInheritable=In&heritable
-ResourceFilterPage_columnFilterArguments=&Match string
+ResourceFilterPage_columnFilterArguments=&Pattern
 ResourceFilterPage_includeOnly=&Include
 ResourceFilterPage_excludeAll=&Exclude
 ResourceFilterPage_includeOnlyColumn=Include
