bug 294338: UI string is missing a mnemonic, has wrong casing and has an unwanted dot

--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -272,7 +272,7 @@ OpenComparedDialog_noChangeTitle=Operation Complete
 OpenComparedDialog_noChangesMessage=No Changes Found.
 GlobalRefreshAction_4=Synchronize...
 GlobalRefreshAction_5=Synchronize {0}
-ParticipantCompareDialog_1=Remember this result by placing it in the Synchronize View.
+ParticipantCompareDialog_1=&Remember this result by placing it in the Synchronize view
 ParticipantCompareDialog_2=Confirm Save
 ParticipantCompareDialog_3=Do you want to save changes?
 SynchronizeManager_27=Confirm Open Perspective
