Bug 292354 - Merge Groups UI from the e4 branch to HEAD

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -14,6 +14,7 @@
 #		- Bug 224997 [Workbench] Impossible to copy project
 #     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
 #     Serge Beauchamp (Freescale Semiconductor) - [252996] Resource filters
+#     Serge Beauchamp (Freescale Semiconductor) - [229633] Group Support
 ###############################################################################
 
 # package: org.eclipse.ui.ide
@@ -336,6 +337,7 @@ CopyFilesAndFoldersOperation_missingLinkTarget = The link target for linked reso
 CopyFilesAndFoldersOperation_CopyResourcesTask=Copying Resources
 CopyFilesAndFoldersOperation_parentNotEqual = The resources must have the same parent.
 CopyFilesAndFoldersOperation_infoNotFound = Information for {0} could not be read. Please check the .log file for details.
+CopyFilesAndFoldersOperation_sourceCannotBeCopiedIntoAGroup = The resource ''{0}'' cannot be copied into a group resource.
 CopyFilesAndFoldersOperation_copyTitle= Copy Resources
 CopyFilesAndFoldersOperation_moveTitle= Move Resources
 
@@ -421,6 +423,16 @@ WizardNewFolderCreationPage_errorTitle = Creation Problems
 WizardNewFolderCreationPage_internalErrorTitle = Creation problems
 WizardNewFolderCreationPage_title = New Folder
 WizardNewFolder_internalError = Internal error: {0}
+
+# --- New Group ---
+WizardNewGroupMainPage_groupName= Group &name:
+WizardNewGroupMainPage_groupLabel= group
+WizardNewGroupMainPage_description = Create a new group resource.
+WizardNewGroupCreationPage_progress = Creating
+WizardNewGroupCreationPage_errorTitle = Creation Problems
+WizardNewGroupCreationPage_internalErrorTitle = Creation problems
+WizardNewGroupCreationPage_title = New Group
+WizardNewGroup_internalError = Internal error: {0}
 
 # --- New File ---
 WizardNewFileCreationPage_progress = Creating
@@ -578,8 +590,10 @@ ResourceInfo_folder = Folder
 ResourceInfo_project = Project
 ResourceInfo_linkedFile = Linked File
 ResourceInfo_linkedFolder = Linked Folder
+ResourceInfo_groupFolder = Group
 ResourceInfo_unknown = Unknown
 ResourceInfo_notLocal = <file contents not local>
+ResourceInfo_isGroup = <group>
 ResourceInfo_undefinedPathVariable = <undefined path variable>
 ResourceInfo_notExist = <resource does not exist>
 ResourceInfo_fileNotExist = {0} - (does not exist)
@@ -690,6 +704,7 @@ CreateLinkedResourceGroup_linkTargetNotFile = Link target must be a file.
 CreateLinkedResourceGroup_linkTargetNotFolder = Link target must be a folder.
 CreateLinkedResourceGroup_linkTargetNonExistent = Link target does not exist.
 CreateLinkedResourceGroup_unableToValidateLinkTarget = Unable to validate link target.
+CreateLinkedResourceGroup_linkRequiredUnderAGroup= Only linked resources can be created under a group (specified under the "advanced" button).
 
 PathVariablesBlock_variablesLabel = &Defined path variables:
 PathVariablesBlock_addVariableButton = &New...
@@ -700,6 +715,18 @@ PathVariableSelectionDialog_title = Select Path Variable
 PathVariableSelectionDialog_extendButton = &Extend...
 PathVariableSelectionDialog_ExtensionDialog_title = Variable Extension
 PathVariableSelectionDialog_ExtensionDialog_description = Choose extension to {0}
+
+ImportTypeDialog_title=File and Folder Import
+ImportTypeDialog_question=Select how files and folders should be imported in the project:
+ImportTypeDialog_moveFilesAndDirectories=Move the files and directories
+ImportTypeDialog_copyFilesAndDirectories=Copy the files and directories.
+ImportTypeDialog_recreateFilesAndDirectories=Recreate the files and directories hierarchy with groups and links.
+ImportTypeDialog_createLinks=Create links for each files and directories
+ImportTypeDialog_importElementsAs=Create linked resources as relative to:
+ImportTypeDialog_automatic=<Automatic>
+ImportTypeDialog_absolutePath=<Absolute Path>
+ImportTypeDialog_editVariables=Edit Variables...
+ImportTypeDialog_alwaysPerformThisOperation=Always perform the selected operation in this context
 
 # ==============================================================================
 # Editor Framework
