--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -145,7 +145,9 @@ HelpPreferencePage_helpBrowser = In the help browser
 HelpPreferencePage_externalBrowser = In an external browser
 HelpPreferencePage_searchLocation = Open help &search 
 
-HelpContentPreferencePage_remote=&Include help content from a remote infocenter
+SearchEmbeddedHelpOnly =  Include local help only
+SearchEmbeddedHelpFirst = Include remote help and give local help priority
+SearchEmbeddedHelpLast =  Include remote help and give it priority
 
 ScopePreferenceDialog_wtitle = Search Scope - {0}
 ScopePreferenceDialog_new=&New...
@@ -183,7 +185,7 @@ IndexButton = Display
 
 NoWorkbenchForExecuteCommand_msg = No workbench available for command execution.
 
-HelpContentPage_title = Remote Infocenters:
+HelpContentPage_title = Configure Infocenters:
 HelpContentBlock_addICTitle = &New
 HelpContentBlock_editICTitle = &Edit 
 HelpContentBlock_removeICTitle = De&lete
@@ -191,6 +193,8 @@ HelpContentBlock_viewICTitle = &View Properties
 HelpContentBlock_testConnectionTitle = &Test Connection
 HelpContentBlock_rmvTitle=Remove {0} &Infocenter
 HelpContentBlock_rmvLabel=Are you sure you want to remove {0}?
+HelpContentBlock_upTitle=&Up
+HelpContentBlock_downTitle=&Down
 AddICDialog_2=Add new infocenter
 AddICDialog_4=&Name:
 AddICDialog_5=&Host:
