bug 260920: Hover on History view pin toolbar needs inconsistent

--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -432,7 +432,7 @@ GenericHistoryTableProvider_Revision=Revision
 GenericHistoryTableProvider_Comment=Comment
 GenericHistoryView_GenericFileHistoryFetcher=Fetching File History
 GenericHistoryView_Refresh=Refresh
-GenericHistoryView_0=Pins this history view
+GenericHistoryView_0=Pin this History View
 GenericHistoryView_1=Show {0}
 GenericHistoryView_2=Show Previous Histories
 GenericHistoryView_GetPredecessor=Get Predecessor
