--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -52,7 +52,10 @@ IDEIdleHelper_backgroundGC = Collecting garbage
 ############################################################
 showAdvanced = &Advanced >>
 hideAdvanced = << &Advanced
-editfilters = Resource Filters...
+editfilters = Resource &Filters...
+useDefaultLocation=Use &default location
+createLinkedFolder=Link to alternate location (&Linked Folder)
+createVirtualFolder=Folder is not located in the file system (&Virtual Folder)
 
 # ==============================================================================
 # Workbench Actions
@@ -337,7 +340,7 @@ CopyFilesAndFoldersOperation_missingLinkTarget = The link target for linked reso
 CopyFilesAndFoldersOperation_CopyResourcesTask=Copying Resources
 CopyFilesAndFoldersOperation_parentNotEqual = The resources must have the same parent.
 CopyFilesAndFoldersOperation_infoNotFound = Information for {0} could not be read. Please check the .log file for details.
-CopyFilesAndFoldersOperation_sourceCannotBeCopiedIntoAGroup = The resource ''{0}'' cannot be copied into a group resource.
+CopyFilesAndFoldersOperation_sourceCannotBeCopiedIntoAGroup = The resource ''{0}'' cannot be copied into a virtual folder.
 CopyFilesAndFoldersOperation_copyTitle= Copy Resources
 CopyFilesAndFoldersOperation_moveTitle= Move Resources
 
@@ -423,16 +426,6 @@ WizardNewFolderCreationPage_errorTitle = Creation Problems
 WizardNewFolderCreationPage_internalErrorTitle = Creation problems
 WizardNewFolderCreationPage_title = New Folder
 WizardNewFolder_internalError = Internal error: {0}
-
-# --- New Group ---
-WizardNewGroupMainPage_groupName= Group &name:
-WizardNewGroupMainPage_groupLabel= group
-WizardNewGroupMainPage_description = Create a new group resource.
-WizardNewGroupCreationPage_progress = Creating
-WizardNewGroupCreationPage_errorTitle = Creation Problems
-WizardNewGroupCreationPage_internalErrorTitle = Creation problems
-WizardNewGroupCreationPage_title = New Group
-WizardNewGroup_internalError = Internal error: {0}
 
 # --- New File ---
 WizardNewFileCreationPage_progress = Creating
@@ -704,7 +697,7 @@ CreateLinkedResourceGroup_linkTargetNotFile = Link target must be a file.
 CreateLinkedResourceGroup_linkTargetNotFolder = Link target must be a folder.
 CreateLinkedResourceGroup_linkTargetNonExistent = Link target does not exist.
 CreateLinkedResourceGroup_unableToValidateLinkTarget = Unable to validate link target.
-CreateLinkedResourceGroup_linkRequiredUnderAGroup= Only linked resources can be created under a group (specified under the "advanced" button).
+CreateLinkedResourceGroup_linkRequiredUnderAGroup= Only linked resources and other virtual folders can be created under a virtual folder.
 
 PathVariablesBlock_variablesLabel = &Defined path variables:
 PathVariablesBlock_addVariableButton = &New...
