bug 297459 - Properties dialog for Virtual Folder shows Type: Group

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -583,7 +583,7 @@ ResourceInfo_folder = Folder
 ResourceInfo_project = Project
 ResourceInfo_linkedFile = Linked File
 ResourceInfo_linkedFolder = Linked Folder
-ResourceInfo_groupFolder = Group
+ResourceInfo_virtualFolder = Virtual Folder
 ResourceInfo_unknown = Unknown
 ResourceInfo_notLocal = <file contents not local>
 ResourceInfo_isGroup = <group>
