*** empty log message ***

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -586,7 +586,7 @@ ResourceInfo_linkedFolder = Linked Folder
 ResourceInfo_virtualFolder = Virtual Folder
 ResourceInfo_unknown = Unknown
 ResourceInfo_notLocal = <file contents not local>
-ResourceInfo_isGroup = <group>
+ResourceInfo_isGroup = <virtual folder>
 ResourceInfo_undefinedPathVariable = <undefined path variable>
 ResourceInfo_notExist = <resource does not exist>
 ResourceInfo_fileNotExist = {0} - (does not exist)
@@ -713,7 +713,7 @@ ImportTypeDialog_title=File and Folder Import
 ImportTypeDialog_question=Select how files and folders should be imported in the project:
 ImportTypeDialog_moveFilesAndDirectories=Move the files and directories
 ImportTypeDialog_copyFilesAndDirectories=Copy the files and directories.
-ImportTypeDialog_recreateFilesAndDirectories=Recreate the file and directory hierarchy with groups and links.
+ImportTypeDialog_recreateFilesAndDirectories=Recreate the file and directory hierarchy with virtual folders and links.
 ImportTypeDialog_createLinks=Create links for each file and directory.
 ImportTypeDialog_importElementsAs=Create linked resources as relative to:
 ImportTypeDialog_automatic=<Automatic>
