*** empty log message ***

--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -57,9 +57,9 @@ links_wrongLocalType = Cannot create linked resource ''{0}''.  Files cannot be l
 links_resourceIsNotALink=Resource ''{0}'' must be a linked resource to change its linked location.
 links_setLocation=Changing link location.
 
-group_creating = Creating group.
-group_errorGroupReconcile = Error processing changed groups in project description file.
-group_invalidParent = Only groups and links can be created under a group.
+group_creating = Creating virtual folder.
+group_errorGroupReconcile = Error processing changed virtual folders in project description file.
+group_invalidParent = Only virtual folders and links can be created under a virtual folder.
 
 filter_creating = Creating filter.
 filters_missingFilterType= Missing resource filter type: ''{0}''.
@@ -128,8 +128,8 @@ projRead_whichValue = Two values detected for an argument value in a build comma
 projRead_notProjectDescription = Encountered element name ''{0}'' instead of \"project\" when trying to read a project description file.
 projRead_failureReadingProjectDesc = Failure occurred reading .project file.
 
-projRead_badGroupName = Names \"{0}\" and \"{1}\" detected for a single group.  Using \"{0}\".
-projRead_emptyGroupName = Empty name detected for group resource "{0}\".
+projRead_badGroupName = Names \"{0}\" and \"{1}\" detected for a single virtual folder.  Using \"{0}\".
+projRead_emptyGroupName = Empty name detected for virtual folder "{0}\".
 
 projRead_emptyVariableName = Empty variable name detected in project "{0}\".
 
