--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -238,6 +238,6 @@ ViewICPropsDialog_23=\ Connected
 ViewICPropsDialog_24=\ Not Connected
 ViewICPropsDialog_URL=URL: 
 
-See=see {0}
-SeeAlso=see also {0}
+See=See {0}
+SeeAlso=See also {0}
 SeeList={0} / {1}
