Description label needs a colon

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -104,7 +104,7 @@ configureFiltersCommand_title = &Configure Contents...
 configureFiltersDialog_title = Configure Contents
 
 propertiesDialog_creationTime_text = Creation &time: 
-propertiesDialog_description_text = &Description 
+propertiesDialog_description_text = &Description: 
 propertiesDialog_folder_text = In &folder: 
 propertiesDialog_location_text = &Location: 
 propertiesDialog_resource_text = On &element: 
