bug 299209 [CommonNavigator]  Clean up error reporting for pipelined extensions

--- a/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
+++ b/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
@@ -14,7 +14,7 @@ CommonFilterSelectionDialog_Available_customization_=Available Customizations
 CommonSorterDescriptorManager_A_navigatorContent_extension_does_n_=A navigatorContent extension does not exist with id\: {0} in plugin {1}
 
 Delete=Delete
-Could_not_provide_children_for_element=Could not acquire children from extension\: {0}
+Exception_Invoking_Extension=An exception occurred invoking extension\: {0} for object {1}
 NewProjectWizard_errorTitle=New Project Problems
 Link_With_Editor_Job_=Linking viewer selection with current editor   
 Navigator_statusLineMultiSelect={0} items selected
