Bug 295606  [Help] Terminology on Help -> Content preference page may need to change

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -185,17 +185,17 @@ IndexButton = Display
 
 NoWorkbenchForExecuteCommand_msg = No workbench available for command execution.
 
-HelpContentPage_title = Configure Infocenters:
+HelpContentPage_title = Configure information centers:
 HelpContentBlock_addICTitle = &New
 HelpContentBlock_editICTitle = &Edit 
 HelpContentBlock_removeICTitle = De&lete
 HelpContentBlock_viewICTitle = &View Properties
 HelpContentBlock_testConnectionTitle = &Test Connection
-HelpContentBlock_rmvTitle=Remove {0} &Infocenter
+HelpContentBlock_rmvTitle=Remove {0} information center
 HelpContentBlock_rmvLabel=Are you sure you want to remove {0}?
 HelpContentBlock_upTitle=&Up
 HelpContentBlock_downTitle=&Down
-AddICDialog_2=Add new infocenter
+AddICDialog_2=Add new information center
 AddICDialog_4=&Name:
 AddICDialog_5=&Host:
 AddICDialog_7=&Path:
@@ -206,7 +206,7 @@ AddICDialog_19=Port must be an integer between 0 and 65535
 HelpContentBlock_3=Disa&ble
 HelpContentBlock_4=Ena&ble
 
-EditICDialog_7=Edit {0} infocenter
+EditICDialog_7=Edit {0} information center
 EditICDialog_10=&Name:
 EditICDialog_11=&Host:
 EditICDialog_12=&Path:
