--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2009 IBM Corporation and others.
+# Copyright (c) 2000, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -81,6 +81,7 @@ localstore_locationUndefined = The location for ''{0}'' could not be determined 
 localstore_refreshing = Refreshing ''{0}''.
 localstore_refreshingRoot = Refreshing workspace.
 localstore_resourceExists = Resource already exists on disk: ''{0}''.
+localstore_resourceDoesNotExist = Resource does not exist on disk: ''{0}''.
 localstore_resourceIsOutOfSync = Resource is out of sync with the file system: ''{0}''.
 
 ### Resource mappings and models
