Bug 227198  [Help] Cannot change font size in help view (Windows or Macintosh)

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -155,6 +155,8 @@ ScopePreferenceDialog_delete=De&lete
 NewEngineWizard_wtitle=New Search Engine
 BrowserPart_showExternalTooltip=Show in external window
 BrowserPart_bookmarkTooltip=Bookmark document
+BrowserPart_magnifyTooltip=Increase Font Size
+BrowserPart_reduceTooltip=Reduce Font Size
 BrowserPart_highlightTooltip=Highlight Search Terms
 BrowserPart_printTooltip=Print
 BrowserPart_syncTocTooltip = Show in Contents
