--- a/bundles/org.eclipse.core.filesystem/src/org/eclipse/core/internal/filesystem/messages.properties
+++ b/bundles/org.eclipse.core.filesystem/src/org/eclipse/core/internal/filesystem/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2006 IBM Corporation and others.
+# Copyright (c) 2005, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -13,7 +13,7 @@
 copying = Copying: {0}.
 couldnotDelete = Could not delete: {0}.
 couldnotDeleteReadOnly = Could not delete read-only file: {0}.
-couldNotLoadLibrary = Could not load library: {0}.  This library provides platform-specific optimizations for certain file system operations.  This library is not present on all platforms, so this may not be an error.  The resources plug-in will safely fall back to using java.io.File functionality.
+couldNotNativeLibrary== Could not load library providing platform-specific optimizations for certain file system operations.  This library is not present on all platforms, so this may not be an error.  The resources plug-in will safely fall back to using java.io.File functionality.
 couldNotMove = Could not move: {0}.
 couldNotRead = Could not read file: {0}.
 couldNotWrite = Could not write file: {0}.
