--- a/bundles/org.eclipse.ui.browser/src/org/eclipse/ui/internal/browser/Messages.properties
+++ b/bundles/org.eclipse.ui.browser/src/org/eclipse/ui/internal/browser/Messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2007 IBM Corporation and others.
+# Copyright (c) 2005, 2010 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -28,26 +28,26 @@ actionWebBrowserRefresh=Refresh the current page
 
 # message if a resource is deleted
 dialogResourceDeletedTitle=Web Resource Deleted
-dialogResourceDeletedMessage=The file {0} initially opened in the Web Browser has been deleted from the file system. Do you want to ignore the deletion or close the Web Browser?
+dialogResourceDeletedMessage=The file {0} initially opened in the web browser has been deleted from the file system. Do you want to ignore the deletion or close the web browser?
 dialogResourceDeletedIgnore=Ignore
 
 # --------------- Preferences ---------------
 
 # Name of the preference pages
 preferenceWebBrowserTitle=Web Browser
-preferenceWebBrowserDescription=Add, remove, or edit installed Web browsers.\nThe selected Web browser will be used by default when Web pages are opened, although some applications may always use the external browser.
+preferenceWebBrowserDescription=Add, remove, or edit installed web browsers.\nThe selected web browser will be used by default when web pages are opened, although some applications may always use the external browser.
 
 # Web Browser preferences
-prefInternalBrowser=Use &internal Web browser
-prefSystemBrowser=Default system Web browser
-prefExternalBrowser=Use e&xternal Web browser
+prefInternalBrowser=Use &internal web browser
+prefSystemBrowser=Default system web browser
+prefExternalBrowser=Use e&xternal web browser
 
 errorDialogTitle=Error
-errorCouldNotLaunchWebBrowser=Could not launch external Web Browser for {0}. Check the Web Browser preferences.
-errorNoBrowser=Could not open a Web browser because there are none configured. Check the Web Browser preferences.
-errorInvalidEditorInput=Could not open Web browser on {0}. Ensure that it is an uncompressed file.
+errorCouldNotLaunchWebBrowser=Could not launch external web browser for {0}. Check the Web Browser preferences.
+errorNoBrowser=Could not open a web browser because there are none configured. Check the Web Browser preferences.
+errorInvalidEditorInput=Could not open web browser on {0}. Ensure that it is an uncompressed file.
 
-browserList=External &Web browsers:
+browserList=External &web browsers:
 add=&New...
 edit=&Edit...
 remove=&Remove
@@ -59,11 +59,11 @@ location=&Location:
 parameters=&Parameters:
 parametersMessage=Example: -url {0}\n(Use {0} to include the URL)
 browse=&Browse...
-browseMessage=Specify the location of the Web Browser executable
-errorCouldNotLaunchInternalWebBrowser=Could not launch internal Web Browser. Please set an external browser in the Browser preferences.
-searchingTaskName=Searching for Web browsers...
+browseMessage=Specify the location of the web browser executable
+errorCouldNotLaunchInternalWebBrowser=Could not launch internal web browser. Please set an external browser in the Browser preferences.
+searchingTaskName=Searching for web browsers...
 searching=Found {0} - Searching {1}
-searchingNoneFound=No Web browsers were found.
-selectDirectory=Select a directory to search for Web browsers:
+searchingNoneFound=No web browsers were found.
+selectDirectory=Select a directory to search for web browsers:
 directoryDialogTitle=Directory Selection
 locationInvalid=The location value is not a valid path name.
