Bug 300899 - Endless OpenDoc events

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -921,4 +921,5 @@ IDEWorkbenchActivityHelper_jobName=Update Capability Enablement for Natures
 OpenDelayedFileAction_title = Open File
 OpenDelayedFileAction_message_errorOnOpen = The file ''{0}'' could not be opened.\nSee log for details.
 OpenDelayedFileAction_message_fileNotFound= The file ''{0}'' could not be found.
+OpenDelayedFileAction_message_noWindow= The file ''{0}'' could not be opened.\nPlease make sure there is at least one open perspective.
 
